--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-gh-pages": "npm run set-version && ng build --prod",
+    "build-gh-pages": "npm run set-version && ng build --prod && npm run scully",
     "set-version": "node ./src/version-generator.js",
-    "release": "standard-version"
+    "release": "standard-version",
+    "scully": "scully",
+    "scully:serve": "scully serve"
   },
   "private": true,
   "standard-version": {
@@ -30,13 +32,16 @@
     "@angular/platform-browser": "9.1.6",
     "@angular/platform-browser-dynamic": "9.1.6",
     "@angular/router": "9.1.6",
+    "@kentico/kontent-backup-manager": "1.4.0",
+    "@scullyio/init": "0.0.26",
+    "@scullyio/ng-lib": "latest",
+    "@scullyio/scully": "latest",
     "angular-cli-ghpages": "0.6.2",
     "core-js": "3.6.5",
     "filesaver.js": "1.3.4",
     "immutable": "4.0.0-rc.12",
     "jszip": "3.4.0",
     "jszip-utils": "0.1.0",
-    "@kentico/kontent-backup-manager": "1.4.0",
     "local-storage-fallback": "4.1.1",
     "mime": "2.4.5",
     "ngx-file-drop": "9.0.1",
